--- a/index.html
+++ b/index.html
@@ -1,50 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-	<meta charset ="UTF-8">
-	<title>Site</title>
-	<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <link href="main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-reboot.min.css">
+  <title>Site</title>
 </head>
 <body>
-	<div class="header">
-       <div class="container">
-		    <div class="header__label"><h1>БРЕНД.ru</h1></div>
-			<div class="header__map header__common"><a>Главная</a></div>
-			<div class="header__common"><a href="#info">История обо мне</a></div>
-			<div class="header__common"><a href="#">Мой блог</a></div>
-			<div class="header__common"><a href="#contacts">Контакты</a></div>
-			<div class="header__common"><a href="#">Моя вторая страница</a></div>
-		</div>
-	</div>
-	<a name="info"></a>
-	<div class="infobox">
-		<div class="container">
-			<h2 class="infobox__title">КРАТКАЯ ИНФОРМАЦИЯ ОБО МНЕ</h2>
-			<p class="infobox__description">
-				Привет всем, меня зовут Катя, мне 24 года, у меня много хобби, и одно из них - готовить сладости.
-			</p>
-	    </div>
-	</div>
-	<a name="contacts"></a>
-	<div class="contacts">
-		<div class="container">
-			<h2 class="contacts__title">КОНТАКТЫ</h2>
-			<div class="contacts__link">
-				<a href="https://vk.com">Ссылка на VK</a>
-			</div>
-			<div class="contacts__link">
-				<a href="https://www.instagram.com">Ссылка на Instagram</a>
-			</div>
-			<div class="contacts__link">
-				<a href="tel:+4374587475489">Номер сотового</a>
-			</div>
-		</div>
-	</div>
-   
-	<div class="footer">
-		<div class="container">
-			<div class="footer__site"><p>© 2019, my-site.ru</p></div>
-		</div>
-	</div>
+  <div class="header">
+  <div class="container">
+   <div class="header__label"><h1>БРЕНД.ru</h1></div>
+ <div class="header__map header__common"><a>Главная</a></div>
+ <div class="header__common"><a href="#info">История обо мне</a></div>
+ <div class="header__common"><a href="#">Мой блог</a></div>
+ <div class="header__common"><a href="#contacts">Контакты</a></div>
+ <div class="header__common"><a href="#">Моя вторая страница</a></div>
+</div>
+</div>
+
+  <a name="info"></a>
+<div class="infobox">
+    <div class="container">
+        <h2 class="infobox__title">КРАТКАЯ ИНФОРМАЦИЯ ОБО МНЕ</h2>
+        <p class="infobox__description">
+            Привет всем, меня зовут Катя, мне 24 года, у меня много хобби, и одно из них - готовить сладости.
+        </p>
+    </div>
+</div>
+
+  <a name="contacts"></a>
+<div class="contacts">
+    <div class="container">
+        <h2 class="contacts__title">КОНТАКТЫ</h2>
+        <div class="contacts__link">
+            <a href="https://vk.com">Ссылка на VK</a>
+        </div>
+        <div class="contacts__link">
+            <a href="https://www.instagram.com">Ссылка на Instagram</a>
+        </div>
+        <div class="contacts__link">
+            <a href="tel:+4374587475489">Номер сотового</a>
+        </div>
+    </div>
+</div>
+
+  <div class="footer">
+    <div class="container">
+        <div class="footer__site"><p>© 2019, my-site.ru</p></div>
+    </div>
+</div>
+
 </body>
+<script src="script.js"></script>
 </html>
