--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
   <div class="header">
-  <div class="container">
-   <div class="header__label"><h1>БРЕНД.ru</h1></div>
- <div class="header__map header__common"><a>Главная</a></div>
- <div class="header__common"><a href="#info">История обо мне</a></div>
- <div class="header__common"><a href="#">Мой блог</a></div>
- <div class="header__common"><a href="#contacts">Контакты</a></div>
- <div class="header__common"><a href="#">Моя вторая страница</a></div>
+  <div class="container"> 
+  <div class="header__label"><img src="../img/Logo.png"></div>
+  <div class="header__map header__common"><a class="header__map header__common" href="" class="header__map header__common">Главная</a>
+  <a class="header__common" href="#info">История обо мне</a>
+  <a class="header__common" href="blog.html">Мой блог</a>
+  <a class="header__common" href="#contacts">Контакты</a>
+  <!-- <a class="header__common" href="#">Моя вторая страница</a> -->
 </div>
 </div>
-
+</div>
   <a name="info"></a>
 <div class="infobox">
     <div class="container">
@@ -45,7 +45,7 @@
 
   <div class="footer">
     <div class="container">
-        <div class="footer__site"><p>© 2019, my-site.ru</p></div>
+        <div class="footer__site "><p>© 2019, my-site.ru</p></div>
     </div>
 </div>
 
