--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,10 @@
         социально-ориентированный национальный проект способствует подготовке и реализации
         форм воздействия.
         </p>
+        <p class="infoblog__date">
+        21.06.2019г.
+        </p>
+        <div class="infoblog__border"></div>
         <p class="infoblog__headline">Я ОЧЕНЬ ЛЮБЛЮ СВОЕ ХОББИ</p>
         <p><img src="/img/infoblog_2.png"></p>
         <p class="infoblog__description">
