--- a/allnews.html
+++ b/allnews.html
@@ -20,31 +20,10 @@
     </div>
 </div>
   <a name="info"></a>
-<div class="infobox-blog">
+<div class="card-allnews">
     <div class="container">
-        <h1 class="infobox-blog__title">ОБО МНЕ</h1>
-    <div class="infobox-blog__wrapper">
-        <img class="infobox-blog__photo"src="/img/photo.png">
-        <p class="infobox-blog__description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum distinctio
-            quasi culpa eveniet assumenda quia qui molestiae est ea odio quos voluptatibus 
-            perspiciatis, ipsam impedit tempore ducimus omnis deserunt adipisci inventore dicta 
-            consectetur, reiciendis fugiat ad! Eum excepturi accusantium amet odio corporis? Odio 
-            dignissimos repudiandae vero sapiente voluptatum laboriosam fuga quidem quos, nostrum voluptate, 
-            qui recusandae commodi. Aliquid tenetur repellat velit assumenda sapiente aspernatur ratione, 
-            error labore pariatur cum architecto debitis odio mollitia unde officiis distinctio quia quam, 
-            voluptas quidem quasi dolorum, repudiandae obcaecati. Veniam voluptatibus dolorum iste molestiae 
-            repellat officiis quibusdam recusandae sequi cupiditate, sit corrupti! Illo, esse quibusdam?
-            <a href="myblog.html"class="button">ПОДРОБНЕЕ</a>
-        </p>
-    </div>
-    </div>
-</div>
-
-  <a name="info"></a>
-<div class="card-blog">
-    <div class="container">
-        <h1 class="article__title">МОЙ БЛОГ</h1>
+        <div class="card-allnews__wrapper">
+        <h1 class="articleallnews__title">МОЙ БЛОГ</h1>
         <div class="article">
                 <div class="card">
                     <img class="card__img"src="/img/article.png">
@@ -56,7 +35,7 @@
                                 adipisci inventore dicta consectetur...</P>
                         </div>
                         <div class="card__box">
-                                <a href="#"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
+                                <a href="detail.html"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
                                 <div class="card__date">26.06.19
                                 </div>
                         </div>
@@ -71,7 +50,7 @@
                                 adipisci inventore dicta consectetur...</p>
                         </div>
                         <div class="card__box">
-                            <a href="#"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
+                            <a href="detail.html"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
                             <div class="card__date">26.06.19
                             </div>
                         </div>
@@ -86,41 +65,67 @@
                                 adipisci inventore dicta consectetur...</p>
                         </div>
                         <div class="card__box">
-                            <a href="#"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
+                            <a href="detail.html"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
                             <div class="card__date">26.06.19
                             </div>
                         </div>
                 </div>
         </div>
-    <div class="button-allnews">
-        <a href="allnews.html"class="button__3">ПОСМОТРЕТЬ ВСЕ НОВОСТИ</a>
-    </div>
-    </div>
-</div>
-
-
-  <a name="contacts-blog"></a>
-<div class="contacts-blog">
-    <div class="container">
-        <h2 class="contacts-blog__title">КОНТАКТЫ</h2>
-
-        <div class="social-contacts">
-            <div class="social-contacts__vk">
-                <a href="https://vk.com">hhhhh</a>
-            </div>
-            <div class="social-contacts__inst">
-                <a href="https://www.instagram.com">hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhm</a>
-            </div>
-            <div class="social-contacts__tel">
-                <a href="tel:+4374587475489">hhhhhhо</a>
-            </div>
-            <div class="social-contacts__email">
-                <a href="email:ekaterinamlukova@gmail.com">hhhhhhо</a>
-            </div>
+        <div class="article-second">
+                <div class="card">
+                        <img class="card__img"src="/img/article.png">
+                            <div class="card__text">
+                                <h2 class=card__title>СЕГОДНЯ ХОДИЛ В КЛУБ ЗАРЯ</h2>
+                                <P class="card__article">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                    Illum distinctio quasi culpa eveniet assumenda quia qui molestiae est ea odio 
+                                    quos voluptatibus perspiciatis, ipsam impedit tempore ducimus omnis deserunt 
+                                    adipisci inventore dicta consectetur...</P>
+                            </div>
+                            <div class="card__box">
+                                    <a href="detail.html"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
+                                    <div class="card__date">26.06.19
+                                    </div>
+                            </div>
+                    </div>
+                    <div class="card">
+                        <img class="card__img"src="/img/article.png">
+                            <div class="card__text">
+                                <h2 class=card__title>СЕГОДНЯ ХОДИЛ В КЛУБ ЗАРЯ</h2>
+                                <p class="card__article">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                    Illum distinctio quasi culpa eveniet assumenda quia qui molestiae est ea odio 
+                                    quos voluptatibus perspiciatis, ipsam impedit tempore ducimus omnis deserunt 
+                                    adipisci inventore dicta consectetur...</p>
+                            </div>
+                            <div class="card__box">
+                                <a href="detail.html"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
+                                <div class="card__date">26.06.19
+                                </div>
+                            </div>
+                    </div>
+                    <div class="card">
+                        <img class="card__img"src="/img/article.png">
+                            <div class="card__text">
+                                <h2 class=card__title>СЕГОДНЯ ХОДИЛ В КЛУБ ЗАРЯ</h2>
+                                <p class="card__article">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                    Illum distinctio quasi culpa eveniet assumenda quia qui molestiae est ea odio 
+                                    quos voluptatibus perspiciatis, ipsam impedit tempore ducimus omnis deserunt 
+                                    adipisci inventore dicta consectetur...</p>
+                            </div>
+                            <div class="card__box">
+                                <a href="detail.html"class="button__2">ПЕРЕЙТИ К НОВОСТИ</a>
+                                <div class="card__date">26.06.19
+                                </div>
+                            </div>
+                    </div>
         </div>
-
+        <div class="button-allnews">
+                <a href="allnews.html"class="button__3">ЗАГРУЗИТЬ ЕЩЕ</a>
+    </div>
+    
+    </div>
     </div>
 </div>
+
 
   <div class="footer-blog">
     <div class="container">
