--- a/index.html
+++ b/index.html
@@ -3,52 +3,233 @@
   <meta charset="UTF-8">
   <link href="main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-reboot.min.css">
-  <title>Site</title>
+  <title>ExamSite</title>
 </head>
 <body>
   <div class="header">
-  <div class="container"> 
-  <div class="header__label"><img src="../img/Logo.png"></div>
-  <div class="header__map header__common"><a class="header__map header__common" href="" class="header__map header__common">Главная</a>
-  <a class="header__common" href="#info">История обо мне</a>
-  <a class="header__common" href="blog.html">Мой блог</a>
-  <a class="header__common" href="#contacts">Контакты</a>
-  <!-- <a class="header__common" href="#">Моя вторая страница</a> -->
+  <div class="container">
+    <div class="header-content__block">
+      <div class="header-content__block_all">
+        <div class="header-content__block_title-group">
+          <div class="header-content__block_title">
+            PICTURES
+          </div>
+          <div class="header-content__block_subtitle">
+            SUBTITLES
+          </div>
+        </div>
+        <div class="header-content__block_nav">
+          <div class="nav__index">
+            <a class="header__nav" href="#info">OUR STORY</a>
+            <a class="header__nav" href="blog.html">SERVICES</a>
+            <a class="header__nav" href="#contacts">FAQ</a>
+            <a class="header__nav" href="#contacts">CONTACT</a>
+          </div>
+        </div>
+        <div class="header-content__block_contacts">
+          <div class="header-content__block_tel">
+            (303) 457-2040
+          </div>
+        </div>
+
+        <div class="header-content__block_button">
+          <div class="header-content__block_button-main">
+          <a href="#"class="button__schedule">
+              Schedule Appointment
+            </a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>  
 </div>
-</div>
-</div>
-  <a name="info"></a>
-<div class="infobox">
-    <div class="container">
-        <h2 class="infobox__title">КРАТКАЯ ИНФОРМАЦИЯ ОБО МНЕ</h2>
-        <p class="infobox__description">
-            Привет всем, меня зовут Катя, мне 24 года, у меня много хобби, и одно из них - готовить сладости.
-        </p>
+  <div class="container">
+    <div class="introduction">
+        <div class="introduction__article">
+            <div class="introduction__border">
+            </div>
+                <div class="introduction__title">
+                    Healthy Spine Family Chiropractic
+                </div>
+                <div class="introduction__description">
+                    <div class="introduction__description-text">
+                    Healthy Spine Family Chiropractic was created for the necessity of custom made chiropractic 
+                    treatment for all ages. We understand that not all bodies are the same.
+                    </div>
+                </div>
+                    <a href="#"class="introduction__button">
+                        Get In Touch Now
+                    </a>
+                <div class="introduction__social-networks">
+                    HHHHHHHHHHHHHHH
+                </div>
+        </div>
+        <div class="introduction__img">
+            <img class="introduction__img-spine"src="/img/spine.png">
+        </div>
     </div>
 </div>
-
-  <a name="contacts"></a>
-<div class="contacts">
-    <div class="container">
-        <h2 class="contacts__title">КОНТАКТЫ</h2>
-        <div class="contacts__link">
-            <a href="https://vk.com">Ссылка на VK</a>
+  <div class="container">
+    <div class="about">
+        <div class="about__img">
+            <img class="about__img-neck"src="/img/neck.png">
         </div>
-        <div class="contacts__link">
-            <a href="https://www.instagram.com">Ссылка на Instagram</a>
-        </div>
-        <div class="contacts__link">
-            <a href="tel:+4374587475489">Номер сотового</a>
+        <div class="about__article">
+            <div class="about__border">
+            </div>
+                <div class="about__title">
+                    <div class="about__title-text">
+                    Comprehensive Pain Treatment
+                    </div>
+                </div>
+                <div class="about__description">
+                    <div class="about__description-text">
+                            Healthy Spine Family Chiropractic was created for the necessity of custom 
+                            made chiropractic treatment for all ages. We understand that not all 
+                            bodies are the same and so your chiropractic treatment will be tailored 
+                            to you. Healthy Spine Family Chiropractic was created for the necessity 
+                            of custom made chiropractic treatment for all ages. We understand that 
+                            not all bodies are the same and so your chiropractic treatment will be 
+                            tailored to you. Healthy Spine Family Chiropractic was created for the 
+                            necessity of custom made chiropractic treatment for all ages. We 
+                            understand that not all bodies are the same and so your chiropractic 
+                            treatment will be tailored to you.
+                    </div>
+                </div>
+                    <a href="#"class="about__button">
+                        Learn more
+                    </a>
         </div>
     </div>
 </div>
+  <div class="container">
+    <div class="services">
+            <div class="services__border">
+            </div>
+            <div class="services__title-text">
+                Services
+            </div>
+        <div class="sercices__card">
 
-  <div class="footer">
-    <div class="container">
-        <div class="footer__site "><p>© 2019, my-site.ru</p></div>
-    </div>
+<div class="sercices__card-chiropractic-massage">
+            <div class="sercices__card-chiropractic">
+                <div class="sercices__card__img">
+                    <img class="sercices__card__img-chiropractic"src="/img/chiropractic.png">
+                </div>
+            <div class="sercices__card-chiropractic_article">
+        <div class="sercices__card-chiropractic_text">
+            <div class="sercices__card-chiropractic_title">
+                Chiropractic
+            </div>
+            <div class="sercices__card-chiropractic_description">
+            Chiropractic care is a unique science that focuses on restoring and maintaining health, 
+            while most other healing arts are designed to treat disease.
+            </div>  
+        <div class="sercices__card-chiropractic_links">
+            <div class="sercices__card-chiropractic_links-1">
+                <div class="sercices__card-chiropractic_link">
+                    Chiropractic Adjustment
+                </div>
+                <div class="sercices__card-chiropractic_link">
+                    Flexion-distraction
+                </div>
+            </div>
+            <div class="sercices__card-chiropractic_links-2">
+                <div class="sercices__card-chiropractic_link">
+                    Thompson
+                </div>
+                <div class="sercices__card-chiropractic_link">
+                    View All Services
+                </div>
+            </div>
+        </div>
+        </div>
+            </div>
+            </div>
+
+            <div class="sercices__card-massage">
+                    <div class="sercices__card__img">
+                        <img class="sercices__card__img-chiropractic"src="/img/chiropractic.png">
+                    </div>
+                <div class="sercices__card-chiropractic_article">
+            <div class="sercices__card-chiropractic_text">
+                <div class="sercices__card-chiropractic_title">
+                    Chiropractic
+                </div>
+                <div class="sercices__card-chiropractic_description">
+                Chiropractic care is a unique science that focuses on restoring and maintaining health, 
+                while most other healing arts are designed to treat disease.
+                </div>  
+            <div class="sercices__card-chiropractic_links">
+                <div class="sercices__card-chiropractic_links-1">
+                    <div class="sercices__card-chiropractic_link">
+                        Chiropractic Adjustment
+                    </div>
+                    <div class="sercices__card-chiropractic_link">
+                        Flexion-distraction
+                    </div>
+                </div>
+                <div class="sercices__card-chiropractic_links-2">
+                    <div class="sercices__card-chiropractic_link">
+                        Thompson
+                    </div>
+                    <div class="sercices__card-chiropractic_link">
+                        View All Services
+                    </div>
+                </div>
+            </div>
+            </div>
+                </div>
+                </div>
+
+</div>
+<div class="card-acupuncture_block">
+            <div class="sercices__card-acupuncture">
+                    <div class="sercices__card__img">
+                        <img class="sercices__card__img-chiropractic"src="/img/chiropractic.png">
+                    </div>
+                <div class="sercices__card-chiropractic_article">
+            <div class="sercices__card-chiropractic_text">
+                <div class="sercices__card-chiropractic_title">
+                    Chiropractic
+                </div>
+                <div class="sercices__card-chiropractic_description">
+                Chiropractic care is a unique science that focuses on restoring and maintaining health, 
+                while most other healing arts are designed to treat disease.
+                </div>  
+            <div class="sercices__card-chiropractic_links">
+                <div class="sercices__card-chiropractic_links-1">
+                    <div class="sercices__card-chiropractic_link">
+                        Chiropractic Adjustment
+                    </div>
+                    <div class="sercices__card-chiropractic_link">
+                        Flexion-distraction
+                    </div>
+                </div>
+                <div class="sercices__card-chiropractic_links-2">
+                    <div class="sercices__card-chiropractic_link">
+                        Thompson
+                    </div>
+                    <div class="sercices__card-chiropractic_link">
+                        View All Services
+                    </div>
+                </div>
+            </div>
+            </div>
+                </div>
+                </div>
 </div>
 
+                </div>
+
+            </div>
+            </div>
+                </div>
+                </div>
+        </div>
+    </div>
+</div>
+  
 </body>
 <script src="script.js"></script>
 </html>
