--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="#"class="introduction__button">
                         Get In Touch Now
                     </a>
-                <div class="introduction__social-networks">
+                <div class="introduction__button_social-networks">
                     HHHHHHHHHHHHHHH
                 </div>
         </div>
@@ -104,26 +104,25 @@
 </div>
   <div class="container">
     <div class="services">
-            <div class="services__border">
+        <div class="services__border">
+        </div>
+        <div class="services__title-text">
+            Services
+        </div>
+<div class="sercices__card">
+    <div class="sercices__card-chiropractic-massage">
+        <div class="sercices__card-chiropractic">
+            <div class="sercices__card__img">
+                <img class="sercices__card__img"src="/img/chiropractic.png">
             </div>
-            <div class="services__title-text">
-                Services
-            </div>
-        <div class="sercices__card">
-
-<div class="sercices__card-chiropractic-massage">
-            <div class="sercices__card-chiropractic">
-                <div class="sercices__card__img">
-                    <img class="sercices__card__img-chiropractic"src="/img/chiropractic.png">
-                </div>
-            <div class="sercices__card-chiropractic_article">
-        <div class="sercices__card-chiropractic_text">
-            <div class="sercices__card-chiropractic_title">
+    <div class="sercices__card-article">
+        <div class="sercices__card-text">
+            <div class="sercices__card-title">
                 Chiropractic
             </div>
-            <div class="sercices__card-chiropractic_description">
-            Chiropractic care is a unique science that focuses on restoring and maintaining health, 
-            while most other healing arts are designed to treat disease.
+            <div class="sercices__card-description">
+                Chiropractic care is a unique science that focuses on restoring and maintaining health, 
+                while most other healing arts are designed to treat disease.
             </div>  
         <div class="sercices__card-chiropractic_links">
             <div class="sercices__card-chiropractic_links-1">
@@ -144,92 +143,95 @@
             </div>
         </div>
         </div>
-            </div>
-            </div>
-
-            <div class="sercices__card-massage">
-                    <div class="sercices__card__img">
-                        <img class="sercices__card__img-chiropractic"src="/img/chiropractic.png">
-                    </div>
-                <div class="sercices__card-chiropractic_article">
-            <div class="sercices__card-chiropractic_text">
-                <div class="sercices__card-chiropractic_title">
-                    Chiropractic
-                </div>
-                <div class="sercices__card-chiropractic_description">
-                Chiropractic care is a unique science that focuses on restoring and maintaining health, 
-                while most other healing arts are designed to treat disease.
-                </div>  
-            <div class="sercices__card-chiropractic_links">
-                <div class="sercices__card-chiropractic_links-1">
-                    <div class="sercices__card-chiropractic_link">
-                        Chiropractic Adjustment
-                    </div>
-                    <div class="sercices__card-chiropractic_link">
-                        Flexion-distraction
-                    </div>
-                </div>
-                <div class="sercices__card-chiropractic_links-2">
-                    <div class="sercices__card-chiropractic_link">
-                        Thompson
-                    </div>
-                    <div class="sercices__card-chiropractic_link">
-                        View All Services
-                    </div>
-                </div>
-            </div>
-            </div>
-                </div>
-                </div>
-
-</div>
-<div class="card-acupuncture_block">
-            <div class="sercices__card-acupuncture">
-                    <div class="sercices__card__img">
-                        <img class="sercices__card__img-chiropractic"src="/img/chiropractic.png">
-                    </div>
-                <div class="sercices__card-chiropractic_article">
-            <div class="sercices__card-chiropractic_text">
-                <div class="sercices__card-chiropractic_title">
-                    Chiropractic
-                </div>
-                <div class="sercices__card-chiropractic_description">
-                Chiropractic care is a unique science that focuses on restoring and maintaining health, 
-                while most other healing arts are designed to treat disease.
-                </div>  
-            <div class="sercices__card-chiropractic_links">
-                <div class="sercices__card-chiropractic_links-1">
-                    <div class="sercices__card-chiropractic_link">
-                        Chiropractic Adjustment
-                    </div>
-                    <div class="sercices__card-chiropractic_link">
-                        Flexion-distraction
-                    </div>
-                </div>
-                <div class="sercices__card-chiropractic_links-2">
-                    <div class="sercices__card-chiropractic_link">
-                        Thompson
-                    </div>
-                    <div class="sercices__card-chiropractic_link">
-                        View All Services
-                    </div>
-                </div>
-            </div>
-            </div>
-                </div>
-                </div>
-</div>
-
-                </div>
-
-            </div>
-            </div>
-                </div>
-                </div>
+    </div>
         </div>
+        <div class="sercices__card-massage">
+            <div class="sercices__card__img">
+                <img class="sercices__card__img"src="/img/massage.png">
+            </div>
+        <div class="sercices__card-article">
+            <div class="sercices__card-text">
+                <div class="sercices__card-title">
+                    Massage
+                </div>
+                <div class="sercices__card-description">
+                    Healthy Spine Family Chiropractic, serves the Thornton and surrounding communities 
+                    and it provides a natural, conservative approach to your health care.
+                </div>  
+            <div class="sercices__card-chiropractic_links">
+                <div class="sercices__card-chiropractic_links-1">
+                    <div class="sercices__card-chiropractic_link">
+                        Deep Tissue
+                    </div>
+                    <div class="sercices__card-chiropractic_link">
+                        Trigger Point 
+                    </div>
+                </div>
+                <div class="sercices__card-chiropractic_links-2">
+                    <div class="sercices__card-chiropractic_link">
+                        Sport Massage 
+                    </div>
+                    <div class="sercices__card-chiropractic_link">
+                        Myofascial Release
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+<div class="card-acupuncture_block">
+    <div class="sercices__card-acupuncture">
+        <div class="sercices__card__img">
+            <img class="sercices__card__img"src="/img/acupuncture.png">
+        </div>
+    <div class="sercices__card-article">
+        <div class="sercices__card-text">
+            <div class="sercices__card-title">
+                Acupuncture
+            </div>
+            <div class="sercices__card-description">
+                Healthy Spine Family Chiropractic, serves the Thornton and surrounding communities 
+                and it provides a natural, conservative approach to your health care.
+            </div>  
+        <div class="sercices__card-chiropractic_links">
+            <div class="sercices__card-chiropractic_links-1">
+                <div class="sercices__card-chiropractic_link">
+                    Cupping
+                </div>
+                <div class="sercices__card-chiropractic_link">
+                    Chinese Herbs
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    </div>
+</div>
+
+</div>
     </div>
 </div>
   
+  <div class="container">
+    <div class="advantages">
+        <div class="advantages__border">
+        </div>
+        <div class="advantages__title">
+            Advantages
+        </div>
+            <div class="advantages__description">
+                <div class="advantages__description-text">
+                    Healthy Spine Family Chiropractic was created for the necessity of 
+                    custom made chiropractic treatment for all ages.
+                </div>
+            </div>
+        </div>
+        <div class="introduction__img">
+            <img class="introduction__img-spine"src="/img/spine.png">
+        </div>
+    </div>
+</div>
 </body>
 <script src="script.js"></script>
 </html>
