--- a/index.html
+++ b/index.html
@@ -225,50 +225,60 @@
                 </div>
             </div>
     <div class="advantages__card">
-        <div class="advantages__card_1">
+        <div class="advantages__card-1">
             <div class="advantages__card-practice">
+                <div class="advantages__card-content">
                     <div class="advantages__card-title">
                         Multi Disciplinary Practice
                     </div>
                     <div class="advantages__card-description">
                         We offer chiropractic, massage and acupuncture.
                     </div>
-            </div>
+                </div>
+            </div>    
             <div class="advantages__card-experience">
+                <div class="advantages__card-content">
                     <div class="advantages__card-title">
                         Over 10 Years of Experience
                     </div>
                     <div class="advantages__card-description">
                         The Doctor has 10+ years of experience in the chiropractic.
                     </div>
-            </div>
+                </div>
+            </div>   
         </div>
         <div class="advantages__card-2">
-                <div class="advantages__card-language">
-                        <div class="advantages__card-title">
-                            The Doctor Speaks Spanish
-                        </div>
-                        <div class="advantages__card-description">
-                            We strive to provide complete care for our patients. We speak English and Spanish.
-                        </div>
-                </div>
-                <div class="advantages__card-insurance">
-                        <div class="advantages__card-title">
-                            Insurance
-                        </div>
-                        <div class="advantages__card-description">
-                            We accept most insurance and file the claims for you.
-                        </div>
+            <div class="advantages__card-language">
+                <div class="advantages__card-content">
+                    <div class="advantages__card-title">
+                        The Doctor Speaks Spanish
+                    </div>
+                    <div class="advantages__card-description">
+                        We strive to provide complete care for our patients. We speak English and Spanish.
+                    </div>
                 </div>
             </div>
+            <div class="advantages__card-insurance">
+                <div class="advantages__card-content">
+                    <div class="advantages__card-title">
+                        Insurance
+                    </div>
+                    <div class="advantages__card-description">
+                        We accept most insurance and file the claims for you.
+                    </div>   
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+    </div>
 </div>
   <div class="container">
     <div class="doctor">
         <div class="doctor__block">
-            <div class="doctor__img">
-                <img class="doctor__img-doctor"src="/img/doctor.png">
+            <div class="doctor__img-background">
+                <div class="doctor__img">
+                        <img class="doctor__img-doctor"src="/img/doctor.png">
+                </div>
             </div>
         </div>
             <div class="doctor__article">
